Fix string white space handling

--- a/assets/scss/_syntax-highlighting.scss
+++ b/assets/scss/_syntax-highlighting.scss
@@ -60,7 +60,7 @@
   .kr    { font-weight: bold } // Keyword.Reserved
   .kt    { color: #458; font-weight: bold } // Keyword.Type
   .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
+  .s     { color: #d14; white-space: pre; } // Literal.String
   .na    { color: #008080 } // Name.Attribute
   .nb    { color: #0086B3 } // Name.Builtin
   .nc    { color: #458; font-weight: bold } // Name.Class
