--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
 @font-face {
     font-family: 'Recursive';
-    src: url('/assets/fonts/recursive/Recursive_VF_1.52.woff2') format('woff2');
+    src: url('/assets/fonts/recursive/Recursive_VF_1.078.woff2') format('woff2');
 }
 
 $base-font-family: 'Recursive', monospace;
